Refactor popup styles: Update font classes to use a more streamlined naming convention for font weights, enhancing readability and maintainability. Adjust CSS properties for body and settings panel for improved aesthetics.

--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -13,6 +13,7 @@ body {
   background: linear-gradient(#530404, 80%, #3b0000f5);
   color: rgb(219, 209, 209);
   box-shadow: inset black 0px 30px 55px;
+  font-size: 100%;
 }
 
 .container {
@@ -58,32 +59,47 @@ h2 {
   font-style: normal;
 }
 
-.noto-sans-jp-100 {
-  font-family: 'Noto Sans JP', sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 100;
-  font-style: normal;
-}
-
-.noto-sans-jp-200 {
-  font-family: 'Noto Sans JP', sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 200;
-  font-style: normal;
-}
-
-.noto-sans-jp-300 {
-  font-family: 'Noto Sans JP', sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 300;
-  font-style: normal;
-}
-
-.noto-sans-jp-regular {
+.noto-sans-jp {
   font-family: 'Noto Sans JP', sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+}
+
+.fw-100 {
+  font-weight: 100;
+}
+
+.fw-200 {
+  font-weight: 200;
+}
+
+.fw-300 {
+  font-weight: 300;
+}
+
+.fw-400 {
+  font-weight: 400;
+}
+
+.fw-500 {
+  font-weight: 500;
+}
+
+.fw-600 {
+  font-weight: 600;
+}
+
+.fw-700 {
+  font-weight: 700;
+}
+
+.fw-800 {
+  font-weight: 800;
+}
+
+.fw-900 {
+  font-weight: 900;
 }
 
 /* ============================================
@@ -140,7 +156,7 @@ h2 {
 .settings-panel {
   background-color: rgba(99, 47, 47, 0.658);
   padding: 10px;
-  border-radius: 5px;
+  border-radius: 17px;
   display: flex;
   flex-direction: column;
   gap: 10px;
