--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -206,6 +206,7 @@ button {
   /* border-radius: 5px; */
   cursor: pointer;
   box-shadow: white 0px 0px 2px;
+  transition: background-color 0.4s, box-shadow 0.1s;
 }
 
 button:hover {
@@ -279,6 +280,7 @@ input[type='file']::file-selector-button {
   border: none;
   border-radius: 0px;
   cursor: pointer;
+  transition: 0.2s;
 }
 input[type='file']::file-selector-button:hover {
   background-color: #0a3549;
