--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -158,8 +158,8 @@ h3 {
   margin-bottom: 15px;
 }
 
-.mr-5{
-    margin-right: 5px;
+.mr-5 {
+  margin-right: 5px;
 }
 .mr-10 {
   margin-right: 10px;
@@ -521,6 +521,7 @@ option::checkmark {
   z-index: 1000;
   border-radius: 5px;
 }
+
 #history-list {
   display: flex;
   flex-direction: column;
@@ -528,31 +529,39 @@ option::checkmark {
   gap: 0px;
   border-radius: inherit;
 }
-#history-list >  button {
+
+#history-list > div {
+  margin: 0;
+  background: #eeeeee;
+  color: black;
+}
+
+#history-list > div > button {
   width: inherit;
   height: 25px;
   border-radius: 0px;
   text-align: left;
   padding-left: 8px;
   overflow: hidden;
-  background-color: var(--text-color);
+  background: none;
+  color: inherit;
 }
 
-#history-list >  button:first-of-type {
+#history-list >  div:first-of-type {
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
 }
 
-#history-list >  button:last-of-type {
+#history-list > div:last-of-type {
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
 }
 
-#history-list >  button:nth-child(odd) {
+#history-list > div:nth-child(odd) {
   background-color: white;
 }
 
-#history-list >  button:hover {
+#history-list > div:hover {
   background-color: #0a3549;
   color: var(--text-color);
 }
@@ -574,3 +583,17 @@ option::checkmark {
 .checkbox-row-item {
   padding-bottom: 5px;
 }
+
+.deleteBtn {
+    width: 20px;
+    height: 28px !important;
+    padding-right: 5px !important;
+    float: right;
+    border-radius: 5px;
+}
+.deleteBtn:hover {
+    background-color: #a1a1a1 !important;
+    border-top-right-radius: inherit !important;
+    border-bottom-right-radius: inherit !important;
+}
+
